test/conformance/chainsaw/generate/foreach/existing/cpol-clone-list-sync-create/0-0-existing.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:cpol-clone-list-sync-create
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
- apiGroups:
  - ''
  resources:
  - secrets
  verbs:
  - get
  - list
  - create
  - update
  - delete
  - patch
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-existing-cpol-clone-list-sync-create-existing-ns
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: foreach-existing-cpol-clone-list-sync-create-existing-ns
type: Opaque
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "false"
    location: europe
  name: mysecret-2
  namespace: foreach-existing-cpol-clone-list-sync-create-existing-ns
type: Opaque
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-existing-cpol-clone-list-sync-create-target-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-existing-cpol-clone-list-sync-create-target-ns-2
