test/conformance/chainsaw/generate/foreach/existing/cpol-clone-list-sync-create/1-2-policy-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: foreach-existing-cpol-clone-list-sync-create
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
