test/conformance/chainsaw/generate/foreach/existing/cpol-clone-list-sync-create/2-1-target-expected.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: foreach-existing-cpol-clone-list-sync-create-target-ns-1
type: Opaque
