test/conformance/chainsaw/generate/foreach/existing/cpol-clone-list-sync-create/2-2-target-none-expected.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-2
  namespace: foreach-existing-cpol-clone-list-sync-create-target-ns-2
type: Opaque
